--- a/.classpath
+++ b/.classpath
@@ -3,9 +3,10 @@
 	<classpathentry kind="src" path="target/generated-sources/antlr4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/이수정/Downloads/antlr-4.7.2-complete.jar"/>
+	<classpathentry kind="lib" path="antlr-4.8-complete.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
